--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h5>ABOUT</h5>
           </div>
           <div class="col-lg-6">
-            <p>Enthusiastic Data Science Learner eager to contribute to team success through hard work, attention to detail and excellent organizational skills. Clear understanding of Machine Learning, Deep Learning and Natural Language Processing and training to be Data Scientist. Motivated to learn, grow and excel in Data Science.</p>
+            <p>An entry-level data scientist and a programmer who takes pride in building models that translate data points into business insights. Used my skills for my projects and research, now eager to apply the same knowledge to real-world business problems.</p>
           </div>
           <div class="col-lg-3">
             <p><a href="#"><i class="icon-file"></i></a>
@@ -478,7 +478,7 @@
               <t>Phone</t><br/> 0177130**** <br/>
             </p>
             <p>
-              <t>Social Links</t><br/>
+              <t>Find Me Online</t><br/>
 
               <a href="https://github.com/nowshad7"><i class="fa fa-github"></i></a>
               <a href="https://www.facebook.com/rhnowshad/"><i class="fa fa-facebook"></i></a>
