--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="row centered">
         <div class="col-lg-12">
           <h1>Robiul Hasan Nowshad</h1>
-          <h3>ML,DL,NLP,Data Science Enthusiastic | nowshad21aug@gmail.com</h3>
+          <h3>>Entry-level Data Scientist and Programmer | nowshad21aug@gmail.com</h3>
         </div>
         <!--/.col-lg-12 -->
       </div>
