--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
               <t>Email</t><br/> nowshad21aug@gmail.com <br/>
             </p>
             <p>
-              <t>Adress</t><br/> Merul Badda <br/> Dhaka <br/> Bangladesh. <br/>
+              <t>Address</t><br/> Merul Badda <br/> Dhaka <br/> Bangladesh. <br/>
             </p>
             <p>
               <t>Phone</t><br/> 0177130**** <br/>
