--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
           <div class="col-lg-3">
             <p><a href="/img/Nowshad_CV.pdf" download><i class="icon-file"></i></a>
-              <sm>DOWNLOAD PDF</sm>
+             <!-- <sm>DOWNLOAD PDF</sm>   -->
             </p>
           </div>
 
