--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>An entry-level data scientist and a programmer who takes pride in building models that translate data points into business insights. Used my skills for my projects and research, now eager to apply the same knowledge to real-world business problems.</p>
           </div>
           <div class="col-lg-3">
-            <p><a href="/img/Nowshad_CV.pdf" download><i class="icon-file">Download CV</i></a>
+            <p><a href="/img/Nowshad_CV.pdf" ><i class="icon-file">Download CV</i></a>
              <!-- <sm>DOWNLOAD PDF</sm>   -->
             </p>
           </div>
