--- a/index.html
+++ b/index.html
@@ -37,529 +37,6 @@
 
 <body data-spy="scroll" data-offset="64" data-target="#section-topbar">
 
-  <div id="section-topbar">
-    <div id="topbar-inner">
-      <div class="container">
-        <div class="row">
-          <div class="dropdown">
-            <ul id="nav" class="nav">
-              <li class="menu-item"><a class="smothscroll" href="#about" title="About"><i class="fa fa-user"></i></a></li>
-              <li class="menu-item"><a class="smothscroll" href="#resume" title="Resume"><i class="fa fa-file-text-o"></i></a></li>
-              <li class="menu-item"><a class="smothscroll" href="#work" title="Works"><i class="fa fa-briefcase"></i></a></li>
-              <li class="menu-item"><a class="smothscroll" href="#contact" title="Contact"><i class="fa fa-envelope"></i></a></li>
-            </ul>
-            <!--/ uL#nav -->
-          </div>
-          <!-- /.dropdown -->
-
-          <div class="clear"></div>
-        </div>
-        <!--/.row -->
-      </div>
-      <!--/.container -->
-
-      <div class="clear"></div>
-    </div>
-    <!--/ #topbar-inner -->
-  </div>
-  <!--/ #section-topbar -->
-
-  <div id="headerwrap">
-    <div class="container">
-      <div class="row centered">
-        <div class="col-lg-12">
-          <h1>Robiul Hasan Nowshad</h1>
-          <h3>Entry-level Data Scientist | Programmer</h3>
-        </div>
-        <!--/.col-lg-12 -->
-      </div>
-      <!--/.row -->
-    </div>
-    <!--/.container -->
-  </div>
-  <!--/.#headerwrap -->
-
-
-  <section id="about" name="about">
-    <div id="intro">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-2 col-lg-offset-1">
-            <h5>ABOUT</h5>
-          </div>
-          <div class="col-lg-6">
-            <p>An entry-level data scientist and a programmer who takes pride in building models that translate data points into business insights. Used my skills for my projects and research, now eager to apply the same knowledge to real-world business problems.</p>
-          </div>
-          <div class="col-lg-3">
-            <p><a href="img/Nowshad_CV_m1_nR.pdf"><i class="icon-file">Download CV</i></a>
-             <!-- <sm>DOWNLOAD PDF</sm>   -->
-            </p>
-          </div>
-
-        </div>
-        <!--/.row -->
-      </div>
-      <!--/.container -->
-    </div>
-    <!--/ #intro -->
-  </section>
-
-
-  <section id="resume" name="resume">
-    <!--EDUCATION DESCRIPTION -->
-    <div class="container desc">
-      <div class="row">
-
-        <div class="col-lg-2 col-lg-offset-1">
-          <h5>EDUCATION</h5>
-        </div>
-        <div class="col-lg-6">
-          <p>
-            <t>BSc in Computer Science And Engineering</t><br/> Ahsanullah University Of Science And Technology <br/>
-          </p>
-        </div>
-        <div class="col-lg-3">
-          <p>
-            <sm>2016-2020</sm><br/>
-          </p>
-        </div>
-
-        <div class="col-lg-6 col-lg-offset-3">
-          <p>
-            <t>HSC</t><br/> Notre Dame College <br/>
-          </p>
-        </div>
-        <div class="col-lg-3">
-          <p>
-            <sm>2012-2014</sm>
-          </p>
-        </div>
-
-      </div>
-      <!--/.row -->
-      <br>
-      <hr>
-    </div>
-    <!--/.container -->
-  </section>
-
-
-  <!--WORK DESCRIPTION -->
-  <div class="container desc">
-    <div class="row">
-
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>WORK</h5>
-      </div>
-      <div class="col-lg-6">
-        <p>
-          <t>Fresher</t><br/> BSC in Computer Science and Engineering <br/>
-        </p>
-        <p>
-          <more>Open to Work</more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>CURRENT</sm>
-        </p>
-      </div>
-    </div>
-	<br>
-    <hr>
-  </div>
-    <!--/.row -->
-	
-  
-	
-	
-
-  <!--/.container -->
-
-
-  <!--AWARDS DESCRIPTION -->
-  <div class="container desc">
-    <div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>CERTIFICATIONS</h5>
-      </div>
-      <div class="col-lg-6">
-        <p>
-          <t>Deep Learning Specialization</t><br/> Coursera  <br/>
-          <more>Offered By deeplearning.ai</more></br>
-		  <more><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/845YWE5LBUNN" class="tm-red-text">See credential</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>July-2020</sm>
-        </p>
-      </div>
-
-      <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>Natural Language Processing Specialization</t><br/> Coursera  <br/>
-          <more>Offered By deeplearning.ai</more></br>
-		  <more><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/YQ47RQHMUD72" class="tm-red-text">See credential</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Oct-2020</sm>
-        </p>
-      </div>
-	  
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>Machine Learning with Python</t><br/> Coursera  <br/>
-          <more>Offered By IBM</more></br>
-		  <more><a href="https://www.coursera.org/account/accomplishments/verify/Q5WYGNCMAJNA" class="tm-red-text">See credential</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Jan-2020</sm>
-        </p>
-      </div>
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>PyTorch Essential Training: Deep Learning</t><br/> LinkedIn  <br/>
-          <more>Offered By LinkedIn</more></br>
-		  <more><a href="http://www.linkedin.com/learning/pytorch-essential-training-deep-learning?trk=flagship-lil_details_certification" class="tm-red-text">See credential</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Jan-2020</sm>
-        </p>
-      </div>
-	  
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>DeepLearning.AI TensorFlow Developer</t><br/> Coursera  <br/>
-          <more>Offered By deeplearning.ai</more></br>
-		  <more>Running</more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-		  <imp>
-             <sm>IN PROGRESS</sm>
-           </imp>
-        </p>
-      </div>
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>Data Scientist with Python track</t><br/> datacamp  <br/>
-          <more>Offered By datacamp</more></br>
-		  <more>Just Started</more><br/>
-		  <more><a href="https://www.datacamp.com/profile/nowshadrobiulh" class="tm-red-text">Profile</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-		  <imp>
-             <sm>IN PROGRESS</sm>
-          </imp>
-        </p>
-      </div>
-
-    </div>
-    <!--/.row -->
-    <br>
-  </div>
-  <!--/.container -->
-
-
-  <!--SKILLS DESCRIPTION -->
-  <div id="skillswrap">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-2 col-lg-offset-1">
-          <h5>SKILLS</h5>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="javascript" height="130" width="130"></canvas>
-          <p>Database Management </p>
-          <br>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="bootstrap" height="130" width="130"></canvas>
-          <p>Python</p>
-          <br>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="wordpress" height="130" width="130"></canvas>
-          <p>C/C++ programming</p>
-          <br>
-        </div>
-
-        <div class="col-lg-3 col-lg-offset-3 centered">
-          <canvas id="html" height="130" width="130"></canvas>
-          <p>Machine learning</p>
-          <br>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="photoshop" height="130" width="130"></canvas>
-          <p>Deep Learning</p>
-          <br>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="illustrator" height="130" width="130"></canvas>
-          <p>HTML,CSS,ASP.NET,MVC,JS,Bootstrap</p>
-          <br>
-        </div>
-		<div class="col-lg-3 col-lg-offset-3 centered">
-          <canvas id="html1" height="130" width="130"></canvas>
-          <p> SQL,MySQL,PL/SQL</p>
-          <br>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="photoshop1" height="130" width="130"></canvas>
-          <p>Natural language processing</p>
-          <br>
-        </div>
-        <div class="col-lg-3 centered">
-          <canvas id="illustrator1" height="130" width="130"></canvas>
-          <p>Algorithm and Data Structure</p>
-          <br>
-        </div>
-		<div class="col-lg-3 col-lg-offset-3 centered">
-          <canvas id="html2" height="130" width="130"></canvas>
-          <p> Java</p>
-          <br>
-        </div>
-		
-
-      </div>
-      <!--/.row -->
-      <br>
-    </div>
-    <!--/.container -->
-  </div>
-  <!--/ #skillswrap -->
-
-
-  <section id="work" name="work">
-  <div class="container desc">
-    <div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>PROJECTS</h5>
-      </div>
-      <div class="col-lg-6">
-        <p>
-          <t>Salary Management System</t><br/> PL/SQL project <br/>
-          <more>It's a PL/SQL project. I created this project with distributed database.<br/>Salary Management has 3 users<br/>1. Admin/HR<br/>2. Accountant<br/>3. Employee<br/>Each has several functionality</more></br>
-		  <more><a href="https://nowshad7.blogspot.com/p/salary-management-system.html" class="tm-red-text">See Projet</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Sep-2019</sm>
-        </p>
-      </div>
-
-      <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>Gem Event - Website </t><br/> C# project  <br/>
-          <more>Its a Event Planning website. I implement it with HTML, CSS , SQL and C#. It has <br/>1. A Home Page <br/>2. Contact page <br/>3. A Beautiful Gallery  <br/>4. Event Order System with Login Logout Page, <br/>5. Create Account and <br/>6. The Admin Panel With  managing Event Order with Log in log out Admin System.   </more></br>
-		  <more><a href="https://github.com/nowshad7/ISD-EventPlannerProject-" class="tm-red-text">See Project</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Feb-2019</sm>
-        </p>
-      </div>
-	  
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>Arrow Game</t><br/> iGraphics Game<br/>
-          <more>A simple iGraphics game developed with visual studio and c++ language</more></br>
-		  <more><a href="https://github.com/nowshad7/Arrow_Game" class="tm-red-text">See Project</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Nov-2016</sm>
-        </p>
-      </div>
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>Object Detecting Armed Car</t><br/> Hardware  <br/>
-          <more>A Hardware Project Which can detect object and picked that up from one place and place that somewhere else by Controlling it by an Android add which is made by me.</more></br>
-		  <more><a href="https://github.com/nowshad7/Object-Detecting-Armed-Car" class="tm-red-text">See Project</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Dec-2018</sm>
-        </p>
-      </div>
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>TDiary-A To Do List </t><br/> Android App  <br/>
-          <more>It's a simple To Do List where you can add you Tasks with time schedule , in sequence order with your Priority. After completing The Task listed in your TDiary, you can mark it as done. You can change your tasks or tasks schedules.</more></br>
-		  <more><a href="https://github.com/nowshad7/TDiary" class="tm-red-text">See Project</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>Jun-2017</sm>
-        </p>
-      </div>
-	  
-	  <div class="col-lg-6 col-lg-offset-3">
-        <p>
-          <t>ChatBot </t><br/> Neural Network <br/>
-          <more>A simple ChatBot-Question Answering System with Basic Neural Network using Pytorch framework.</more></br>
-		  <more><a href="https://github.com/nowshad7/Retrieval-based-ChatBot-using-Neural-Network" class="tm-red-text">See Project</a></more>
-        </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <sm>jun-2020</sm>
-        </p>
-      </div>
-	  
-
-    </div>
-    <!--/.row -->
-    
-	<hr>
-	<br>
-	<div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>RESEARCH</h5>
-      </div>
-      <div class="col-lg-6">
-        <p>
-          <t>Natural Language Processing and Deep Learning</t><br/>
-          <more>Continuing research on Natural Language Processing and Deep Learning. My current research is on Extractive text summarization and advanced ChatBot.</more>
-		  </p>
-      </div>
-      <div class="col-lg-3">
-        <p>
-          <imp>
-             <sm>IN PROGRESS</sm>
-          </imp>
-        </p>
-      </div>
-    </div>
-	<hr>
-	<br>
-	<div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>INTERESTS</h5>
-      </div>
-      <div class="col-lg-6">
-        <p>
-          Traveling<br/>Event Planning<br/>Cricket<br/>Football
-         </p>
-      </div>
-
-    </div>
-	<br/>
-  </div>
-  <!--/.container -->
-
-
- 
-  </section>
-
-  <section id="contact" name="contact">
-    <!--FOOTER DESCRIPTION -->
-    <div id="footwrap">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-2">
-            <h5>CONTACT</h5>
-          </div>
-          <div class="col-lg-4">
-            <p>
-              <t>Email</t><br/> nowshad21aug@gmail.com <br/>
-            </p>
-            <p>
-              <t>Address</t><br/> Merul Badda <br/> Dhaka <br/> Bangladesh. <br/>
-            </p>
-            <p>
-              <t>Phone</t><br/> 0177130**** <br/>
-            </p>
-            <p>
-              <t>Find Me Online</t><br/>
-
-              <a href="https://github.com/nowshad7"><i class="fa fa-github"></i></a>
-              <a href="https://www.facebook.com/rhnowshad/"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.linkedin.com/in/rh-nowshad/"><i class="fa fa-linkedin"></i></a>
-         
-            </p>
-          </div>
-          <div class="col-lg-6">
-            <p>
-              <sm>CONTACT FORM</sm>
-            </p>
-            <form class="contact-form php-mail-form" role="form" action="contactform/contactform.php" method="POST">
-
-              <div class="form-group">
-                <label for="contact-name">Your Name</label>
-                <input type="name" name="name" class="form-control" id="contact-name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="contact-email">Your Email</label>
-                <input type="email" name="email" class="form-control" id="contact-email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <label for="contact-subject">Subject</label>
-                <input type="text" name="subject" class="form-control" id="contact-subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject">
-                <div class="validate"></div>
-              </div>
-
-              <div class="form-group">
-                <label for="contact-message">Your Message</label>
-                <textarea class="form-control" name="message" id="contact-message" placeholder="Your Message" rows="5" data-rule="required" data-msg="Please write something for us"></textarea>
-                <div class="validate"></div>
-              </div>
-
-              <div class="loading"></div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your message has been sent. Thank you!</div>
-
-              <div class="form-send">
-                <button type="submit" class="btn btn-large">Send Message</button>
-              </div>
-
-            </form>
-
-          </div>
-        </div>
-        <!--/.row -->
-      </div>
-      <!--/.container -->
-    </div>
-    <!--/ #footer -->
-  </section>
-
-  <div id="copyrights">
-    <div class="container">
-      <p>
-        &copy; Copyrights <strong>Robiul Hasan Nowshad</strong>. All Rights Reserved
-      </p>
-    </div>
-  </div>
-
-  <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.min.js"></script>
-  <script src="lib/php-mail-form/validate.js"></script>
-  <script src="lib/chart/chart.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-
-  <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
-
+ <script> window.location.replace("https://nowshad7.github.io/");</script>
 </body>
 </html>
